--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,30 @@
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
 }
 
-
+#timer {
+  font-size: large;
+  font-weight: bold;
+}
 
 .board-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
-.board-block {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid #d3d6da;
-    width: 60px;
-    height:  60px;
+.board-column {
+  width: 60px;
+  height: 60px;
+  border: 3px solid #d3d6da;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
 }
